Fix cucumber tests
Signed-off-by: Gerben Kroes <gerben@kroesctrl.nl>